@@ -9,6 +9,8 @@ Schemagen
       specific hints (hints such as: an option, prefix binding for the empty
       prefix, or an owl:Ontology or daml:Ontology resource). The algorithm
       is to look for the most prevalent URI that is not owl:, rdf: etc.
+    o Added a new option, --includeSource, which causes schemagen to include
+      the source code of the input ontology into the generated Java object.
 
 Ontology API updates
     o Added methods to Individual to allow testing and manipulation of the
